fix: remove String.format
https://github.com/CallVDois/dns-manager/pull/7#discussion_r2061318075